[gd_scene load_steps=7 format=3 uid="uid://c656wt8q4lbp4"]

[ext_resource type="Script" uid="uid://d0yhgl1rcjtyx" path="res://scripts/openbooster.gd" id="1_g08gs"]
[ext_resource type="Theme" uid="uid://6shp5ck1tnja" path="res://gui/FlatUI4/kenneyUI.tres" id="1_ysxdp"]
[ext_resource type="FontFile" uid="uid://d0gaa71hjim87" path="res://gui/ProtestRevolution-Regular.ttf" id="3_ki8ix"]
[ext_resource type="Texture2D" uid="uid://kj811blknuv6" path="res://gui/background.jpg" id="3_mm8m7"]
[ext_resource type="PackedScene" uid="uid://ce178nojpif7d" path="res://scenes/card.tscn" id="3_ysxdp"]
[ext_resource type="Theme" uid="uid://mbsg4xqnedxi" path="res://gui/FlatUI4/kenneyUI-red.tres" id="4_xnfyq"]

[node name="Openbooster" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("1_ysxdp")
script = ExtResource("1_g08gs")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(960, 565)
texture = ExtResource("3_mm8m7")

[node name="ButtonOk" type="Button" parent="."]
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -79.5
offset_top = -155.0
offset_right = 79.5
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_xnfyq")
theme_override_fonts/font = ExtResource("3_ki8ix")
theme_override_font_sizes/font_size = 72
text = "CLOSE"

[node name="Collection" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 40.0
offset_bottom = 128.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_ki8ix")
theme_override_font_sizes/font_size = 64
text = "Set X: X/X"
horizontal_alignment = 1

[node name="Collection2" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 47.0
offset_top = 879.0
offset_right = 475.0
offset_bottom = 1032.0
theme_override_fonts/font = ExtResource("3_ki8ix")
theme_override_font_sizes/font_size = 8
text = "D: X
C: X
B: X
A: X
S: X
X: X"

[node name="Price1" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -922.0
offset_top = 138.0
offset_right = -630.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_ki8ix")
theme_override_font_sizes/font_size = 32
text = "Set X: X/X"
horizontal_alignment = 1

[node name="Price2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -530.0
offset_top = 138.0
offset_right = -238.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_ki8ix")
theme_override_font_sizes/font_size = 32
text = "Set X: X/X"
horizontal_alignment = 1

[node name="Price3" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.0
offset_top = 138.0
offset_right = 146.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_ki8ix")
theme_override_font_sizes/font_size = 32
text = "Set X: X/X"
horizontal_alignment = 1

[node name="Price4" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 238.0
offset_top = 138.0
offset_right = 530.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_ki8ix")
theme_override_font_sizes/font_size = 32
text = "Set X: X/X"
horizontal_alignment = 1

[node name="Price5" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 614.0
offset_top = 138.0
offset_right = 906.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_ki8ix")
theme_override_font_sizes/font_size = 32
text = "Set X: X/X"
horizontal_alignment = 1

[node name="CardContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 760)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -930.0
offset_top = -383.0
offset_right = 3198.0
offset_bottom = 713.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.45, 0.45)
theme_override_constants/separation = 32

[node name="Card1" parent="CardContainer" instance=ExtResource("3_ysxdp")]
layout_mode = 2

[node name="Card2" parent="CardContainer" instance=ExtResource("3_ysxdp")]
layout_mode = 2

[node name="Card3" parent="CardContainer" instance=ExtResource("3_ysxdp")]
layout_mode = 2

[node name="Card4" parent="CardContainer" instance=ExtResource("3_ysxdp")]
layout_mode = 2

[node name="Card5" parent="CardContainer" instance=ExtResource("3_ysxdp")]
layout_mode = 2

[connection signal="pressed" from="ButtonOk" to="." method="_on_button_ok_pressed"]
